updated German and Slovak translation

--- a/po/wesnoth-dw/sk.po
+++ b/po/wesnoth-dw/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2012-01-07 15:30+0100\n"
+"PO-Revision-Date: 2012-01-20 21:24+0100\n"
 "Last-Translator: Roman Beno <romanbeno273@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -66,7 +66,7 @@ msgstr "Triton"
 #: data/campaigns/Dead_Water/_main.cfg:22
 msgid "(Intermediate level, 10 scenarios.)"
 msgstr ""
-"(Stredne ťažká obtiažnosť, 10 scén. Preklad Roman Beňo (Svistwarrior273)."
+"(Stredne ťažká obtiažnosť, 10 scén. Preklad Roman Beňo (Svistwarrior273))."
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:22
@@ -79,12 +79,12 @@ msgid ""
 "your troops!\n"
 "\n"
 msgstr ""
-"Si Kai Krellis, syn a následník posledného kráľa morského ľudu, ale iba "
-"dieťa. Černokňažník premieňa tvoj ľud na nemŕtvych otrokov! Veď svoj ľud na "
-"misii požiadať mocnú morskú čarodejníčku, aby ti pomohla odraziť inváziu. "
-"Oceány blízko Severných zemí sú nebezpečné, takže budeš potrebovať všetku "
-"svoju prefíkanosť a odvahu, aby si prežil. Ale najprv potrebuješ získať "
-"rešpekt u tvojich vojakov!\n"
+"Si Kai Krellis, syn a následník posledného kráľa morských ľudí, ale iba "
+"dieťa. Černokňažník premieňa tvojich služobníkov a priateľov na nemŕtvych "
+"otrokov! Veď svoj ľud na misii požiadať mocnú morskú čarodejníčku, aby ti "
+"pomohla odraziť inváziu. Oceány blízko Severných zemí sú nebezpečné, takže "
+"budeš potrebovať všetku svoju prefíkanosť a odvahu, aby si prežil. Ale "
+"najprv potrebuješ získať rešpekt u tvojich vojakov!\n"
 "\n"
 
 #. [about]
@@ -475,7 +475,7 @@ msgstr ""
 #. [message]: speaker=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:282
 msgid "Leave some of them for me."
-msgstr "Niektorých z nich nechajte pre mňa."
+msgstr "Niektorých z tých rybákov nechajte pre mňa."
 
 #. [message]: speaker=Dead Knight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:288
@@ -486,7 +486,8 @@ msgstr "Aj pre mňa."
 #. [message]: speaker=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:293
 msgid "And him."
-msgstr "A hlavne mi nechajte toho rybieho blázna, čo im vládne."
+msgstr ""
+"A hlavne mi nezabite toho rybieho blázna, čo im vládne.Chcem ho dokončiť sám."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:298
@@ -537,7 +538,7 @@ msgstr ""
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:328
 msgid "Very well. How do we get there?"
-msgstr "Dobre. Ako sa k nej dostaneme?"
+msgstr "Dobre. Tak ako sa k nej dostaneme?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:333
@@ -642,13 +643,13 @@ msgstr "Nemali by sme na neho zaútočiť?"
 msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
-msgstr "Ale on neútočí na <i>mňa</i>. Je neškodný."
+msgstr "Ja neviem... Nevyzerá, že by mal nejaké nepriateľské úmysly..."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
-msgstr "Ak nezaútočí, nemali by sme ho zabiť. Pozrime sa, či pôjde za nami."
+msgstr "V tom prípade by sme ho nemali zabiť. Pozrime sa, či pôjde za nami."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
@@ -811,7 +812,7 @@ msgstr "Zabitie týchto nepriateľov bolo užitočné, ale na ceste sem sú ďal
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:844
 msgid "Onward to Tyegëa’s island, then."
-msgstr "Pokračujme teda na Tyegein ostrov."
+msgstr "Vyrazme teda na Tyegein ostrov. Niet času na zvyš."
 
 #. [scenario]: id=03_Wolf_Coast
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:13
@@ -948,8 +949,8 @@ msgid ""
 "Cylanna and a few soldiers had been farther."
 msgstr ""
 "Morskí ľudia boli teraz oveľa ďalej od domova, ako kedykoľvek predtým. Iba "
-"Cylanna a zopár vojakov, ktorí boli v Laudissovej armáde boli tak ďaleko od "
-"Jothy."
+"Cylanna a zopár vojakov, ktorí slúžili v Laudissovej armáde boli tak ďaleko "
+"od Jothy."
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:105
@@ -1232,7 +1233,7 @@ msgid ""
 "but I was humiliated in the end."
 msgstr ""
 "Bol som na love severne odtiaľto, keď ma zajali nejakí zelení krpci. Mnohých "
-"som zabil, ale predsa im podarilo zajať ma."
+"som zabil, ale predsa sa im podarilo zajať ma."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:673
