fixed typo in german translation

--- a/po/wesnoth/de.po
+++ b/po/wesnoth/de.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.9\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-20 21:39+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"PO-Revision-Date: 2012-01-20 22:37+0100\n"
+"Last-Translator: Elias Pschernig <allefant@allefant.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de <>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -3732,7 +3732,7 @@ msgstr ""
 "Ihr scheint der Autor von '$addon|' zu sein. Wenn Ihr '$addon|' dennoch "
 "herunterladet, überschreibt Ihr damit alle Änderungen die ihr möglicher "
 "Weise seit dem letzten Hochladen gemacht habt und löscht außerdem eure pbl "
-"Datei. Seit Ihr sicher dass Ihr fortfahren wollt?"
+"Datei. Seid Ihr sicher dass Ihr fortfahren wollt?"
 
 #: src/addon/manager.cpp:1101 src/addon/manager.cpp:1328
 #: src/addon/manager.cpp:1421 src/multiplayer.cpp:264
