Updated the Spanish translation.

--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-20 19:38+0100\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-20 20:54-0500\n"
 "Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -304,9 +304,8 @@ msgid ""
 "The great continent to the east of <ref>dst='morogor' text='Morogor'</ref>. "
 "Its existence is unknown to the drakes until the flight of Galun."
 msgstr ""
-"El nuevo continente -- El gran continente al este de <ref>dst='morogor' "
-"text='Morogor'</ref>. Su existencia era desconocida para los dracos hasta el "
-"vuelo de Galun."
+"El gran continente al este de <ref>dst='morogor' text='Morogor'</ref>. Su "
+"existencia era desconocida para los dracos hasta el vuelo de Galun."
 
 #. [topic]: id=abyss
 #: data/core/encyclopedia/drakes.cfg:43
@@ -1076,7 +1075,7 @@ msgstr ""
 "    • Ciudades destacadas:\n"
 "          ◦ Glamdrol: Una capital tribal orca.\n"
 "          ◦ Romyr: Otra capital tribal orca.\n"
-"          ◦ Wesmere: Hogar del Ka'lian - el consejo elfo.\n"
+"          ◦ Wesmere: Hogar del Ka'lian — el consejo elfo.\n"
 "          ◦ Puertas enanas: Una ciudad mixta de humanos y enanos situada en "
 "la parte sur de las montañas profundas, en una región de Knalga. Un gran "
 "enclave comercial.\n"
@@ -1137,7 +1136,7 @@ msgstr ""
 "          ◦ Ninguna conocida.\n"
 "    • Accidentes geográficos de importancia:\n"
 "          ◦ El bosque de Aethen: El mayor bosque al sur, se extiende lejos "
-"hacia el sudoeste - mucho más lejos de lo trazado - y es el hogar de "
+"hacia el sudoeste — mucho más lejos de lo trazado — y es el hogar de "
 "<ref>dst='..race_elf' text='los elfos'</ref>."
 
 #. [topic]: id=heart_mountains
@@ -1474,7 +1473,7 @@ msgstr ""
 "Presta suma atención al cuadro emergente «<bold>text='Objetivos'</bold>» al "
 "principio de cada escenario. Por lo general, conseguirás la victoria por "
 "matar a todos los líderes enemigos, y sólo serás derrotado si matan a tu "
-"líder. Pero los escenarios pueden tener otros objetivos de victoria - llevar "
+"líder. Pero los escenarios pueden tener otros objetivos de victoria — llevar "
 "a tu líder a un punto designado, por ejemplo, o rescatar a alguien, o la "
 "solución de un puzzle, o resistir un sitio hasta que un cierto número de "
 "turnos hayan transcurrido."
@@ -1817,7 +1816,7 @@ msgid ""
 msgstr ""
 "En algunos escenarios, habrá partes del mapa que estarán ocultas. Hay dos "
 "mecanismos que pueden usarse juntos o por separado. La "
-"<italic>text='oscuridad</italic> oculta tanto el terreno como cualquier "
+"<italic>text='oscuridad'</italic> oculta tanto el terreno como cualquier "
 "unidad que exista en un lugar dado. No obstante, una vez despejada, siempre "
 "será posible ver dicho lugar. La <italic>text='niebla de guerra</italic> "
 "sólo oculta las unidades y los dueños de las aldeas (cuando no pertenezcan "
@@ -1833,10 +1832,10 @@ msgstr ""
 "reclutamiento (dado que muchas unidades reciben rasgos al azar cuando son "
 "reclutadas). El explorar terreno oculto limpiando la oscuridad o la niebla "
 "también impedirá volver a un estado previo. Puede ser deseable activar la "
-"opción <bold>text='retardar refresco de zonas oscuras</bold> en el menú de "
+"opción <bold>text='Retardar refresco de zonas oscuras</bold> en el menú de "
 "acciones. Esto impedirá que las unidades limpien la oscuridad o la niebla "
 "hasta el próximo evento aleatorio o hasta una actualización manual mediante "
-"<bold>text='actualizar zonas oscuras</bold> (o el fin de tu turno) "
+"<bold>text='Actualizar zonas oscuras</bold> (o el fin de tu turno) "
 "preservando así la posibilidad de deshacer movimientos."
 
 #. [topic]: id=combat
@@ -1901,8 +1900,8 @@ msgstr ""
 "fallar, en cuyo caso no hay ningún daño. Esta secuencia se alterna hasta que "
 "cada unidad haya hecho uso de todos sus ataques. El número de ataques que "
 "tiene una unidad varía: por ejemplo, un luchador elfo con un ataque con "
-"espada 5-4 puede esgrimirla 4 veces haciendo 5 puntos de daño cada vez, "
-"mientras que un soldado raso orco con 9-2 tiene sólo 2 ataques (pero hace 9 "
+"espada 5–4 puede esgrimirla 4 veces haciendo 5 puntos de daño cada vez, "
+"mientras que un soldado raso orco con 9–2 tiene sólo 2 ataques (pero hace 9 "
 "puntos de daño cada vez)."
 
 #. [topic]: id=combat
@@ -1988,7 +1987,7 @@ msgstr ""
 "\n"
 "\n"
 "Cada golpe que acierte causa una cantidad de daño básica que depende del "
-"tipo de ataque. Por ejemplo, un luchador elfo con un ataque de espada 5-4 "
+"tipo de ataque. Por ejemplo, un luchador elfo con un ataque de espada 5–4 "
 "causa un daño básico de 5. Este valor se modifica normalmente de acuerdo a "
 "dos factores: la <ref>dst='damage_types_and_resistance' text='resistencia'</"
 "ref> y la <ref>dst='time_of_day' text='hora del día'</ref>. Para ver cómo se "
@@ -2104,7 +2103,7 @@ msgstr ""
 "la noche.\n"
 " Las unidades caóticas ganan un +25% de daño de noche y un −25% de día.\n"
 " Las unidades neutrales no se ven afectadas por la hora del día.\n"
-" Las unidades crepusculares causan -25% de daño tanto de día como durante la "
+" Las unidades crepusculares causan −25% de daño tanto de día como durante la "
 "noche."
 
 #. [topic]: id=time_of_day
@@ -3775,7 +3774,7 @@ msgstr ""
 "Cambia los controles del bando (escriba aquí el número del bando) al usuario "
 "(escriba aquí el apodo del jugador u observador). Se puede comprobar qué "
 "bando pertenece a qué jugador en el diálogo de <bold>text='Preferencias del "
-"escenario'</bold> (Presiona el botón <bold>text='más'</bold> en la "
+"escenario'</bold> (Presiona el botón <bold>text='Más'</bold> en la "
 "<bold>text='Tabla de estado'</bold> (alt+s por defecto) para llegar ahí.). "
 "El anfitrión puede cambiar el control de cualquier bando.\n"
 "\n"
@@ -5153,7 +5152,7 @@ msgstr ""
 "Los dracos son una raza relativamente belicosa y como mejor pueden ser "
 "descritas sus sociedades es como una cultura marcial y combativa. El núcleo "
 "de una tribu draconiana es un pequeño grupo de guerreros veteranos "
-"encabezados por un respetado - o simplemente temido - <ref>dst='dominant' "
+"encabezados por un respetado — o simplemente temido — <ref>dst='dominant' "
 "text='draco dominante'</ref> que dirige la sociedad con mano de hierro. De "
 "cada draco se espera que se gane su puesto en la jerarquía, obedeciendo a "
 "sus superiores y comandando a sus inferiores. Entrar en la élite gobernante "
@@ -5868,7 +5867,7 @@ msgstr ""
 "intimidación de seguidores. Una tribu orca en tiempos de paz tiende a "
 "centrarse casi exclusivamente en el fortalecimiento de sí misma en "
 "preparación para el próximo conflicto armado. Se sabe que los orcos poseen "
-"un rudimentario sistema de escritura - normalmente en sangre - aunque es más "
+"un rudimentario sistema de escritura — normalmente en sangre — aunque es más "
 "comúnmente utilizado para intercambiar insultos o amenazas entre los jefes "
 "tribales.\n"
 "\n"
@@ -5877,7 +5876,7 @@ msgstr ""
 "arrebatarle el título. Una lucha constante por el poder hierve entre los "
 "posibles jefes tribales. Un líder orco rara vez vive más de un puñado de "
 "años para disfrutar de su autoridad absoluta antes de ser asesinado por su "
-"posición - aunque la historia conoce algunas excepciones notables. Los orcos "
+"posición — aunque la historia conoce algunas excepciones notables. Los orcos "
 "no sostienen ningún código de honor en particular y aunque la indisputable "
 "fuerza bruta es típicamente el método preferido de mostrar poder, el "
 "asesinato, el envenenamiento y el apuñalamiento por detrás son métodos "
