--- a/po/wesnoth-manual/es.po
+++ b/po/wesnoth-manual/es.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-01-20 16:56-0500\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-20 20:43-0500\n"
 "Last-Translator: Ignacio Riquelme Morelle <shadowm2006@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -265,11 +265,10 @@ msgstr ""
 "Cuando Wesnoth es iniciado, lo primero que muestra es un fondo inicial y una "
 "columna de botones llamada el Menú Principal. Los botones sólo funcionan con "
 "un ratón. Para los impacientes, les recomendamos: hacer clic en el botón "
-"\"Idioma\" (\"Language\") para establecer el idioma que deseen; luego hacer "
-"clic en el botón del \"Tutorial\" para entrar a una sesión de aprendizaje "
-"básico; finalmente, jugar la campaña \"Un Cuento sobre Dos Hermanos\" "
-"haciendo clic en el botón \"Campaña\" y seleccionándola de la lista "
-"visualizada."
+"«Idioma» para establecer el idioma que deseen; luego hacer clic en el botón "
+"del «Tutorial» para entrar a una sesión de aprendizaje básico; finalmente, "
+"jugar la campaña «Un cuento sobre dos hermanos» haciendo clic en el botón "
+"«Campaña» y seleccionándola de la lista visualizada."
 
 # type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject>
@@ -408,7 +407,7 @@ msgstr ""
 "mostrará un diálogo listando las partidas guardadas. Selecciona la que "
 "deseas y haz clic en Aceptar para cargar y continuar, o Cancelar para volver "
 "al menú principal. Si seleccionas una repetición de juego, puedes "
-"seleccionar la casilla de verificación \"Mostrar Repetición\". El juego "
+"seleccionar la casilla de verificación «Mostrar Repetición». El juego "
 "cargado hará todos los movimientos desde el principio mientras tú lo "
 "visualizas."
 
@@ -432,8 +431,8 @@ msgstr ""
 "alojan una gran cantidad de contenidos creados por los usuarios normales. "
 "Entre las cosas que hay disponibles hay muchas campañas, eras multijugador "
 "(que definen las facciones para partidas multijugador) y mapas multijugador. "
-"Con el botón \"Eliminar complementos\" puedes eliminarlos de nuevo una vez "
-"que ya no las quieras."
+"Con el botón «Eliminar complementos» puedes eliminarlos de nuevo una vez que "
+"ya no las quieras."
 
 # type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
@@ -542,8 +541,7 @@ msgstr "Siguiente"
 msgid ""
 "Click this button to read the next little tip from the \"Tome of Wesnoth\"."
 msgstr ""
-"Haz clic en este botón para leer el siguiente consejo del \"Tomo de Wesnoth"
-"\"."
+"Haz clic en este botón para leer el siguiente consejo del «Tomo de Wesnoth»."
 
 # type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
@@ -558,7 +556,7 @@ msgid ""
 "Click this button to read the previous little tip from the \"Tome of Wesnoth"
 "\"."
 msgstr ""
-"Haz clic en este botón para leer el consejo anterior del \"Tomo de Wesnoth\"."
+"Haz clic en este botón para leer el consejo anterior del «Tomo de Wesnoth»."
 
 # type: Content of: <book><chapter><section><title>
 #. type: Content of: <book><chapter><section><title>
@@ -646,8 +644,7 @@ msgstr ""
 "la manera más rápida de jugar, pero tus unidades no se guardan y no se "
 "pueden usar unidades de campaña. Puedes jugar escenarios contra el ordenador "
 "o contra otros jugadores, ya sea a través de Internet o en tu ordenador. Los "
-"escenarios se acceden a través del botón \"Multijugador\" en el menú "
-"principal."
+"escenarios se acceden a través del botón «Multijugador» en el menú principal."
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -684,7 +681,7 @@ msgid ""
 "the \"Multiplayer\" button:"
 msgstr ""
 "Hay varias posibles opciones que se te ofrecen al hacer clic en el botón "
-"\"Multijugador\":"
+"«Multijugador»:"
 
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
@@ -760,7 +757,7 @@ msgid ""
 "server is currently not available."
 msgstr ""
 "Esta opción abre un cuadro de diálogo que te permite introducir la dirección "
-"de la máquina a unirse. En este diálogo también está el botón \"Ver lista\", "
+"de la máquina a unirse. En este diálogo también está el botón «Ver lista», "
 "que muestra una lista de servidores oficiales que se pueden utilizar como "
 "respaldo si el servidor principal no está disponible actualmente."
 
@@ -851,18 +848,18 @@ msgid ""
 "together in a game with a friend against an AI opponent."
 msgstr ""
 "Esto crea una partida que sólo se ejecuta en tu ordenador. También se puede "
-"usar como partida de \"asiento compartido\", donde todos juegan en el mismo "
-"ordenador tomando turnos en el \"asiento compartido\". Esta clase de "
-"partidas tiene aproximadamente la misma duración que aquéllas jugadas a "
-"través de la Internet. O bien, puedes jugar un solo escenario contra "
-"adversarios controlados por la IA (Inteligencia Artificial) en vez de "
-"jugadores humanos. Esto puede ser una buena manera de familiarizarse con los "
-"distintos mapas que se utilizan para múltiples jugadores antes de jugar "
-"contra oponentes reales. También puede utilizarse como una manera sencilla "
-"de explorar las capacidades de las unidades de las diferentes facciones "
-"eligiendo la facción para jugar y las facciones de tus oponentes en estas "
-"partidas. Por supuesto, también puedes mezclar ambos en una partida. Es "
-"decir, jugar juntos en una partida con un amigo contra un oponente IA."
+"usar como partida de «asiento compartido», donde todos juegan en el mismo "
+"ordenador tomando turnos en el «asiento compartido». Esta clase de partidas "
+"tiene aproximadamente la misma duración que aquéllas jugadas a través de la "
+"Internet. O bien, puedes jugar un solo escenario contra adversarios "
+"controlados por la IA (inteligencia artificial) en vez de jugadores humanos. "
+"Esto puede ser una buena manera de familiarizarse con los distintos mapas "
+"que se utilizan para múltiples jugadores antes de jugar contra oponentes "
+"reales. También puede utilizarse como una manera sencilla de explorar las "
+"capacidades de las unidades de las diferentes facciones eligiendo la facción "
+"para jugar y las facciones de tus oponentes en estas partidas. Por supuesto, "
+"también puedes mezclar ambos en una partida. Es decir, jugar juntos en una "
+"partida con un amigo contra un oponente IA."
 
 # type: Content of: <book><chapter><section><section><title>
 #. type: Content of: <book><chapter><section><section><title>
@@ -1096,14 +1093,14 @@ msgid ""
 msgstr ""
 "La primera cosa que probablemente vas a querer hacer es reclutar tu primera "
 "unidad. Presiona <literal>Ctrl+r</literal> (o haz clic con el botón derecho "
-"del ratón en un hexágono de castillo vacío y selecciona \"Reclutar\") y "
-"podrás reclutar una unidad de una lista de todas las unidades disponibles "
-"para ti. Cada recluta es colocado en un hexágono de castillo desocupado. Una "
-"vez que se ha llenado el castillo, no se pueden reclutar más unidades hasta "
-"que las unidades se muevan. El comandante de tu oponente también está "
-"situado de manera similar en el torreón de su castillo y comenzará a "
-"reclutar sus tropas &#8212; así que no te entretengas mirando el paisaje, "
-"hay una batalla que ganar."
+"del ratón en un hexágono de castillo vacío y selecciona «Reclutar») y podrás "
+"reclutar una unidad de una lista de todas las unidades disponibles para ti. "
+"Cada recluta es colocado en un hexágono de castillo desocupado. Una vez que "
+"se ha llenado el castillo, no se pueden reclutar más unidades hasta que las "
+"unidades se muevan. El comandante de tu oponente también está situado de "
+"manera similar en el torreón de su castillo y comenzará a reclutar sus "
+"tropas &#8212; así que no te entretengas mirando el paisaje, hay una batalla "
+"que ganar."
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -2241,7 +2238,7 @@ msgid ""
 msgstr ""
 "Cada unidad tiene también un coste de mantenimiento. El coste de "
 "mantenimiento es generalmente igual al nivel de la unidad, a menos que la "
-"unidad tenga el rasgo \"Leal\" (<link linkend=\"traits\">véase más adelante</"
+"unidad tenga el rasgo «leal» (<link linkend=\"traits\">véase más adelante</"
 "link>). Las unidades que no son reclutadas inicialmente — es decir, el líder "
 "o aquéllas que se unan voluntariamente — por lo general tienen el rasgo "
 "Leal. El mantenimiento sólo se pagará si el mantenimiento total de las "
@@ -2354,8 +2351,8 @@ msgid ""
 "Afternoon and First Watch, Second Watch, by the positions of the sun and "
 "moon in the time of day graphic."
 msgstr ""
-"Las dos fases de \"día\" y \"noche\" están diferenciadas como mañana, tarde "
-"y anochecer, noche cerrada, por las posiciones del sol y la luna en la hora "
+"Las dos fases de «día» y «noche» están diferenciadas como mañana, tarde y "
+"anochecer, noche cerrada, por las posiciones del sol y la luna en la hora "
 "del día gráfica."
 
 # type: Content of: <book><chapter><section><section><simpara>
@@ -3968,7 +3965,7 @@ msgid ""
 msgstr ""
 "Puedes obtener información adicional, incluida la posibilidad de que el "
 "atacante y el defensor sean asesinados, haciendo clic en el botón de "
-"\"cálculo de daño\" en la ventana de lucha."
+"«cálculo de daño» en la ventana de lucha."
 
 # type: Content of: <book><chapter><section><section><title>
 #. type: Content of: <book><chapter><section><section><title>
@@ -4283,7 +4280,7 @@ msgstr ""
 "Los siguientes principios básicos de combate y consejos tienen por objeto "
 "ayudarte a empezar tu carrera como un veterano de batalla Wesnothiano. Los "
 "ejemplos concretos menores están de alguna manera ligados a la campaña "
-"\"Heredero al Trono\"."
+"«Heredero al trono»."
 
 # type: Content of: <book><chapter><section><section><title>
 #. type: Content of: <book><chapter><section><section><title>
@@ -4356,8 +4353,8 @@ msgid ""
 "control into account. Thus you can check that your near death unit, which is "
 "behind, indeed cannot be attacked as the enemy cannot move close to it."
 msgstr ""
-"En el menú de Acciones, puede seleccionar \"Mostrar movimientos del enemigo"
-"\" para mostrar todos los posibles hexágonos a los que puede moverse tu "
+"En el menú de Acciones, puede seleccionar «Mostrar movimientos del enemigo» "
+"para mostrar todos los posibles hexágonos a los que puede moverse tu "
 "adversario. Esto toma en cuenta tus zonas de control. Así puedes comprobar "
 "que tu unidad allí detrás, cercana a la muerte, ciertamente no puede ser "
 "atacada puesto que el enemigo no puede acercársele."
@@ -4434,9 +4431,9 @@ msgid ""
 msgstr ""
 "Alineando muchas unidades adyacentes directamente con como mucho 1 hexágono "
 "de espacio entre ellas, podrás construir una potente línea defensiva. Ten en "
-"cuenta que, debido a que Wesnoth usa hexágonos, la \"línea\" este-oeste no "
-"es una línea recta sino una en zig-zag. La línea norte-sur y las diagonales "
-"son las «verdaderas» líneas."
+"cuenta que, debido a que Wesnoth usa hexágonos, la «línea» este-oeste no es "
+"una línea recta sino una en zig-zag. La línea norte-sur y las diagonales son "
+"las «verdaderas» líneas."
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -4762,7 +4759,7 @@ msgid ""
 "you have prior experience with strategy games. We feel you&#8217;ll find it "
 "much more rewarding."
 msgstr ""
-"Considera la posibilidad de jugar en la campaña el nivel \"medio\" de "
+"Considera la posibilidad de jugar en la campaña el nivel «medio» de "
 "dificultad, sobre todo si tienes experiencia previa con juegos de "
 "estrategia. Creemos que lo encontrarás mucho más gratificante."
 
@@ -4905,8 +4902,8 @@ msgid ""
 msgstr ""
 "Unidades diferentes tienen diferentes puntos fuertes y débiles en función "
 "del terreno y a quien se está atacando; haz clic con el botón derecho sobre "
-"las unidades y selecciona la opción \"Descripción de unidad\" para obtener "
-"más información."
+"las unidades y selecciona la opción «Descripción de unidad» para obtener más "
+"información."
 
 # type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
@@ -4999,8 +4996,8 @@ msgstr ""
 "ataques. Unidades montadas son débiles frente a los ataques de perforación. "
 "Ataques de fuego y arcanos destruyen a los no muertos. Para ver cuánto "
 "resiste una unidad a un ataque de un tipo, haga clic derecho en la unidad, "
-"seleccione \"Descripción de unidad\", a continuación, seleccione "
-"\"Resistencia\". Se le mostrará cómo de resistente es una unidad frente a "
+"seleccione «Descripción de unidad», a continuación, seleccione "
+"«Resistencia». Se le mostrará cómo de resistente es una unidad frente a "
 "diferentes tipos de ataques."
 
 # type: Content of: <book><chapter><section><section><simpara>
@@ -5071,7 +5068,7 @@ msgid ""
 "gold and experience (advanced units)."
 msgstr ""
 "Después de escenarios estilo masacre (donde se recibe un montón de castigo), "
-"generalmente hay escenarios de \"respiro\" donde se puede ganar bastante "
+"generalmente hay escenarios de «respiro» donde se puede ganar bastante "
 "fácilmente algo de oro y experiencia (unidades avanzadas)."
 
 # type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
