--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -8,12 +8,13 @@
 # Automatically generated, 2004.
 # Alessio D'Ascanio <otaku@fastwebnet.it>, 2004, 2005.
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2009.
+# Antonio Rosella <arosella@yahoo.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-20 16:57+0100\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 02:12+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -552,9 +553,9 @@ msgid ""
 "dispute their right to do so."
 msgstr ""
 "Un'armatura nera contrassegna l'ordine di eccellenza della casta dei "
-"Guerrieri: il maestro di spada. Pochi riescono a raggiungere l'abilità ed la "
-"potenza necessaria per essere ammessi in questa casta superiore senza morire "
-"in battaglia. Sebbene gli altri draghi possano denigrare la casta dei "
+"Combattenti: il maestro di spada. Pochi riescono a raggiungere l'abilità ed "
+"la potenza necessaria per essere ammessi in questa casta superiore senza "
+"morire in battaglia. Sebbene gli altri draghi possano denigrare la casta dei "
 "guerrieri, verificano sempre due volte che non ce ne sia qualcuno nei "
 "paraggi. Un maestro di spada protegge ferocemente l'onere dei suoi compagni, "
 "e nessuno si azzarda a mettere in discussione il loro diritto di fare così."
@@ -619,7 +620,7 @@ msgid ""
 "particularly good at \"resolving\" territorial disputes with other drakes "
 "and enforcing the laws of their tribe."
 msgstr ""
-"Gli Impattatori sono menbri di una particolare casta fra i draghi. La loro "
+"Gli Impattatori sono membri di una particolare casta fra i draghi. La loro "
 "spessa armatura è così pesante ed ingombrante che, sebbene compensi la "
 "naturale debolezza dei draghi rispetto alle lance ed alle frecce, impedisce "
 "loro di volare e di raccogliere abbastanza fiato per usare il loro fuoco "
@@ -647,6 +648,13 @@ msgid ""
 "careful not to besmirch the honor of the Enforcers, and generally call upon "
 "them to combat only the most pernicious of enemies."
 msgstr ""
+"Le tattiche di manovra e dell'inganno non sono cosa per i Vigilanti: loro "
+"preferiscono gettarsi dove la mischia è più viva. A corto raggio, poco "
+"importa che l'armatura impedisca loro di sputare fiamme: quello che conta è "
+"la potenza che hanno imparato a focalizzare in ogni colpo. I leaders dei "
+"draghi stanno ben attenti a non macchiare l'onore dei Vigilanti , e "
+"generalmente li chiamano soltanto per combattere i loro nemici più "
+"pericolosi."
 
 #. [attack]: type=impact
 #: data/core/units/drakes/Enforcer.cfg:56
@@ -702,6 +710,11 @@ msgid ""
 "vitality emanates through their skin, scorching their scales to a reddish-"
 "gray."
 msgstr ""
+"Non essendo loro permesso utilizzare i colori rosso-dorati riservati ai "
+"ranghi più alti degli Inceneritori, i draghi di fuoco decorano la loro "
+"armatura con l'argento. Sebbene abbiano soltanto iniziato a dedicare le loro "
+"vite alla fiamma che arde al loro interno, la sua vitalità filtra attraverso "
+"la loro pelle, arroventando le loro scaglie di un colore grigio-rossastro."
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:4
@@ -719,6 +732,14 @@ msgid ""
 "leader for supremacy, and only if he is sure of the support of his fellow "
 "drakes."
 msgstr ""
+"I Cuore di Fiamma mancano della forza necessaria per sconfiggere gli altri "
+"draghi di alto lignaggio in singolar tenzone, preferendo in ogni caso "
+"evitare il confronto all'interno della tribù. L'esperienza ha insegnato ad "
+"ogni drago di questa statura l'ampiezza della propria autorità: dove può "
+"spingere quelli che comanda e quando è meglio abbandonarli ai loro affari. "
+"Solo occasionalmente un Cuore di Fiamma sfiderà il leader della sua tribù "
+"per la supremazia, e soltanto se è certo del supporto dei suoi alleati "
+"draghi."
 
 #. [unit_type]: id=Drake Flare, race=drake
 #: data/core/units/drakes/Flare.cfg:4
@@ -734,6 +755,13 @@ msgid ""
 "they are more often seen leading small war parties or mediating disputes "
 "with a subtle hand."
 msgstr ""
+"Rispettati per il calore della loro fiamma e riveriti per il loro carisma, "
+"la più grande aspirazione degli Splendenti è quella di diventare dei grandi "
+"leader della loro gente, sia in guerra che in pace. sebbene una piccola ed "
+"isolata tribù possa accettare ogni tanto uno Splendente come comandante, "
+"sono stati visti più spesso alla guida di piccoli gruppi da guerra o "
+"coinvolti nella mediazione di qualche disputa, senza disdegnare qualche "
+"sotterfugio."
 
 #. [unit_type]: id=Drake Glider, race=drake
 #: data/core/units/drakes/Glider.cfg:4
@@ -756,6 +784,20 @@ msgid ""
 "distance – and if all else fails, he will fight with his feet, keeping his "
 "precious wings as far from the enemy as possible."
 msgstr ""
+"Molti draghi amano il fluire dell'aria sulle loro scaglie, e ciò li porta ad "
+"indossare i panni lievi della casta dei Leggeri. Le lunghe incursioni nei "
+"territori più remoti dei possedimenti della tribù sono la loro passione, "
+"sebbene spesso gli altri draghi non riescano a capire cosa possa indurre "
+"qualcuno ad assumersi l'onere di cacciare quando si potrebbe acquisire ben "
+"più gloria sul campo di battaglia\n"
+"\n"
+"Molto spesso, i Leggeri prendo parti a grande battute di caccia al cervo, al "
+"cinghiale o al delfino: l'ancestrale abilità dei draghi di sputare fuoco, "
+"limitata dall'armatura nelle altre classi, è impagabile per indirizzare e "
+"radunare le prede senza ferirle. Se un Leggero è chiamato in battaglia, "
+"preferisce disturbare il nemico da lontano - e se ogni altro tentativo "
+"fallisce, combatterà con i suoi artigli inferiori, tenendo le su prezione "
+"ali più lontano possibile dal nemico."
 
 #. [attack]: type=impact
 #: data/core/units/drakes/Glider.cfg:43
@@ -779,6 +821,15 @@ msgid ""
 "castes has increased their skill in combat, but their greatest strength "
 "still lies in their speed and flight."
 msgstr ""
+"I Draghi degli uragani hanno fatto un passo avanti rispetto ai semplici "
+"doveri legati alla caccia e alla guardia delle greggi ai quali sono legati i "
+"membri inferiori della loro casta. Essi sono parte integrante dell'esercito "
+"dei draghi, perlustratori avanzati delle forze principali, staffette sui "
+"campi di battaglia e abili nel piombare sul nemico dove meno se lo aspetta. "
+"Sebbene autorizzati a malincuore, l'addestramento congiunto con i nuovi "
+"adepti delle altre classi ha permesso loro di incrementare le abilità di "
+"combattimento, ma i loro maggiori punti di forza rimangono la velocità e le "
+"abilità aeree."
 
 #. [unit_type]: id=Inferno Drake, race=drake
 #: data/core/units/drakes/Inferno.cfg:4
@@ -816,6 +867,13 @@ msgid ""
 "of their tribe and, just possibly, time with one of the closely-guarded "
 "drake females."
 msgstr ""
+"La leggera armatura di ceramica che i draghi del cielo indossano è il "
+"simbolo del loro livello, argento vitreo che onora la loro connessione con "
+"l'aria. In qualità di comandanti della caccia, spesso rimangono a lungo "
+"lontano dalle loro case. Ciascuno di loro prova a portare a casa quanto più "
+"bottino possibile, in competizione con gli altri per guadagnare il rispetto "
+"della  tribù e, se il caso, e un po' di tempo con una delle controllatissime "
+"dragonesse. "
 
 #. [unit_type]: id=Drake Thrasher, race=drake
 #: data/core/units/drakes/Thrasher.cfg:4
@@ -832,14 +890,14 @@ msgid ""
 "are weapons. A Thrasher will gladly fulfill his caste duties, as long as it "
 "can be done on the battlefield."
 msgstr ""
-"Invece di accettare di essere limitati dalla loro armatura, i draghi "
-"massacratori hanno imparato ad indirizzare il loro peso in modo da aumentare "
-"l'inerzia del loro corpo, aggiungendo potenza al colpo delle loro corte "
-"lance e degli artigli supplementari montati sui loro arti superiori. "
-"Equipaggiamento e corpo formano così un tutt'uno: persino i loro massicci "
-"elmi e lo spesso cranio sottostante sono considerate delle armi. un drago "
-"corazzato adempirà volentieri ai suoi doveri di casta, fintanto che possa "
-"essere fatto sul campo di battaglia."
+"Invece di accettare di essere limitati dalla loro armatura, i Massacratori "
+"hanno imparato ad indirizzare il loro peso in modo da aumentare l'inerzia "
+"del loro corpo, aggiungendo potenza al colpo delle loro corte lance e degli "
+"artigli supplementari montati sui loro arti superiori. Equipaggiamento e "
+"corpo formano così un tutt'uno: persino i loro massicci elmi e lo spesso "
+"cranio sottostante sono considerate delle armi. un drago corazzato adempirà "
+"volentieri ai suoi doveri di casta, fintanto che possa essere fatto sul "
+"campo di battaglia."
 
 #. [unit_type]: id=Drake Warden, race=drake
 #: data/core/units/drakes/Warden.cfg:4
@@ -857,6 +915,15 @@ msgid ""
 "bronze plate is the strongest work from the Drake forges, and their halberds "
 "can cleave a human in half."
 msgstr ""
+"I custodi si differenziano dal resto degli altri membri della casta degli "
+"Impattatori per due motivi: i loro elmi decorati, modellati sulla forma "
+"degli antenati dragoni, e la cura con la quale  drappeggiano con stoffe "
+"brillantemente colorate le loro ali corazzate prima di presentarsi a "
+"rapporto per i loro doveri. Sebbene questo modo di vestire sia alimentato "
+"principalmente dall'orgoglio che provano per il loro ruolo nella società dei "
+"draghi, è in realtà qualcosa di più che un semplice cerimoniale. Le loro "
+"ingombranti armature di bronzo sono quanto di più robusto possa essere "
+"forgiato dai draghi, e le loro alabarde possono spaccare un umano a metà."
 
 #. [unit_type]: id=Drake Warrior, race=drake
 #: data/core/units/drakes/Warrior.cfg:4
@@ -873,6 +940,13 @@ msgid ""
 "plated leather with the traditional war blade mounted on the back of each "
 "hand."
 msgstr ""
+"I draghi della casta dei Combattenti, come i Guerrieri, sono le fondamenta "
+"dell'esercito di ogni tribù. Nessuna abilità speciale o peculiarità li "
+"contraddistingue: semplicemente la loro naturale forza bruta e "
+"l'addestramento militare li aiuta ad aprirsi la via attraverso le forze "
+"nemiche. Hanno combattuto così per secoli, vestiti di armature di cuoio "
+"placcate di ceramica ed armati con la tradizionale lama da battaglia montata "
+"sul dorso delle loro mani."
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:4
@@ -936,6 +1010,13 @@ msgid ""
 "having practiced this skill hunting in the mountains. Their maneuverability "
 "makes them dangerous and tricky foes."
 msgstr ""
+"I nani esploratori sono i migliori nell'arte della sopravvivenza. "
+"Utilizzando soltanto l'equipaggiamento che riescono a portare nel loro "
+"zaino, possono vagare per mesi tra le foreste e le montagne, in cerca di "
+"nuovi filoni d'oro e depositi di minerali. Sebbene le loro abilità in "
+"mischia siano inferiori a quelle di altri nani, sono imbattibili nel lancio "
+"dell'ascia, avendo migliorato questa abilità con la caccia di montagna. La "
+"loro manovrabilità li rende dei nemici pericolosi e ingannevoli."
 
 #. [unit_type]: id=Dwarvish Fighter, race=dwarf
 #: data/core/units/dwarves/Fighter.cfg:4
@@ -1007,7 +1088,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
 msgid "Dwarvish Scout"
-msgstr "Nano esploratore"
+msgstr "Nano ricognitore"
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:23
@@ -1021,6 +1102,16 @@ msgid ""
 "However, they pay for their speed with the poorer protection provided by "
 "their lighter armor."
 msgstr ""
+"Sebbene i nani non possano equipararsi alle razze più alte in termini di "
+"velocità, quando si è ricoperti da una pesante armatura la tremenda quantità "
+"di stamina e la leggendaria resistenza permette loro di essere veloci come "
+"la maggior parte delle altre creature, a parte i più veloci. I nani "
+"ricognitori usano questo a loro vantaggio, muovendosi di fronte alle forze "
+"principali e riportando informazioni sui movimenti delle truppe nemiche e la "
+"loro disposizione, o mettendo in sicurezza importanti obiettivi. Al di fuori "
+"della battaglia, vengono spesso utilizzati per scambiare messaggi tra le "
+"varie comunità dei nani. Comunque, pagano la loro velocità con la peggior "
+"protezione fornita dalle loro armature leggere."
 
 #. [unit_type]: id=Dwarvish Sentinel, race=dwarf
 #: data/core/units/dwarves/Sentinel.cfg:4
@@ -1605,7 +1696,7 @@ msgstr ""
 #. [female]
 #: data/core/units/elves/Sharpshooter.cfg:156
 msgid "female^Elvish Sharpshooter"
-msgstr "Maestra di tiro elfica"
+msgstr "Elfa maestra di tiro"
 
 #. [unit_type]: id=Elvish Shyde, race=elf
 #: data/core/units/elves/Shyde.cfg:4
@@ -2333,6 +2424,13 @@ msgid ""
 "positions. A few of these in battle line will stiffen it considerably, "
 "albeit at an obvious cost in tactical flexibility."
 msgstr ""
+"La fanteria pesante è formata da prestanti combattenti vestiti di tutto "
+"punto con armature complete e pesanti armi da impatto. Sebbene combattano "
+"con una potenza ineguagliabile in mischia, hanno una bassa mobilità e "
+"trovano il loro migliore impiego come difesa statica di posizioni "
+"fortificate.  Basta qualcuna di queste unità in una linea di combattimento "
+"per rinforzarla considerevolmente, sebbene occorra pagare un ovvio costo in "
+"termini di flessibilità tattica."
 
 #. [attack]: type=impact
 #: data/core/units/humans/Loyalist_Heavy_Infantryman.cfg:38
@@ -3142,6 +3240,12 @@ msgid ""
 "attacking on lonely roads or in the dead of night. Their experience with "
 "such encounters makes them deadly foes in hand to hand combat."
 msgstr ""
+"I grassatori hanno ottenuto la loro infame reputazione grazie ai loro "
+"disonesti atti di violenza. Sempre pronti a schierarsi dalla parte di chi li "
+"paga di più, guidano bande di furfanti contro i nemici del loro datore di "
+"lavoro, spesso attaccando su strade sperdute o nel pieno della notte. La "
+"loro esperienza in questo tipo di incontri li rende avversari mortali nel "
+"combattimento spalla a spalla."
 
 #. [unit_type]: id=Rogue, race=human
 #: data/core/units/humans/Outlaw_Rogue.cfg:4
@@ -3492,6 +3596,18 @@ msgid ""
 "effective chase over land, and are at a great disadvantage in hand-to-hand "
 "combat."
 msgstr ""
+"I nereidi tendono ad utilizzare una combinazione di reti e mazze per la "
+"pesca: le reti raccolgono il pesce e le mazze si occupano di completarne "
+"l'uccisione. Entrambi questi attrezzi hanno visto un adattamento per la "
+"guerra e sono abbastanza funzionali da far si che chi si specializza nel suo "
+"utilizzo venga portato apposta in battaglia.\n"
+"\n"
+"i nereidi spesso si trovano in difficoltà con nemici terrestri: tanto i "
+"nereidi sono troppo forti in acqua, quanto sono troppo deboli in qualsiasi "
+"attacco sulla terra. Le reti sono una chiave di volta per il livellamento "
+"delle parti: senza le reti, i nereidi non sono in grado di combattere "
+"efficacemente sul solido terreno e sono in enorme svantaggio nel "
+"combattimento spalla a spalla."
 
 #. [unit_type]: id=Merman Fighter, race=merman
 #: data/core/units/merfolk/Fighter.cfg:4
@@ -3606,6 +3722,20 @@ msgid ""
 "shore. Clubs were used in combat with little or no adaptation from fishing, "
 "since they were already quite deadly."
 msgstr ""
+"La pesca, così come viene praticata dai nereidi, è in gran parte una "
+"questione di inseguimento di branchi di pesci all'interno di reti stese, "
+"dove mazze forgiate a forma di remo vengono usate per indirizzare le prede. "
+"L'idea di utilizzare queste reti contro dei soldati ha funzionato "
+"egregiamente: la maggior parte delle creature terrestri sono già abbastanza "
+"a disagio quando sono con l'acqua alla cintola, e il fatto di sentirsi "
+"intrappolati in una rete li rende quasi impotenti.\n"
+"\n"
+"L'efficacia di questo metodo ha portato allo sviluppo di reti più piccole, "
+"ben bilanciate, che possano essere lanciate in aria: sebbene inutili per la "
+"pesca, si rivelano essere utili sia in combattimento che quando il gioco "
+"della caccia si sposta in zone troppo vicine alla riva. Le mazze usate in "
+"combattimento differiscono poco o niente da quelle  usate per la pesca, in "
+"quanto erano già abbastanza mortali."
 
 #. [unit_type]: id=Mermaid Priestess, race=merman
 #: data/core/units/merfolk/Priestess.cfg:4
@@ -4195,7 +4325,7 @@ msgid ""
 msgstr ""
 "Gli orchi considerano l’arco come un’arma da codardi; ma persino loro, e "
 "specialmente i più giovani e mingherlini, sono abbastanza pragmatici da "
-"utilizzarli. Gli orchi arceri sono raramente ben equipaggiati, e non hanno "
+"utilizzarli. Gli orchi arcieri sono raramente ben equipaggiati, e non hanno "
 "alcuna parvenza di addestramento. Anche se maneggiate con poca maestria, le "
 "loro armi sono comunque da considerare mortali, e coloro che le portano "
 "raramente viaggiano isolati."
@@ -4356,7 +4486,7 @@ msgstr ""
 "\n"
 "Per questo motivo, gli orchi pagano qualunque prezzo per ognuna di queste "
 "armi che riescono a saccheggiare e queste finiscono invariabilmente nelle "
-"mani degli arceri più forti e abili."
+"mani degli arcieri più forti e abili."
 
 #. [unit_type]: id=Orcish Sovereign, race=orc
 #: data/core/units/orcs/Sovereign.cfg:4
