--- a/po/wesnoth-l/fr.po
+++ b/po/wesnoth-l/fr.po
@@ -3,9 +3,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth 1.6\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-09 02:33+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 12:43+0200\n"
+"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -2832,19 +2832,14 @@ msgstr "Paysan chasseur"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
-"Les chasseurs passent leur vie dans les bois retirés et les marais de leurs "
-"demeures sauvages. Ils peuvent tuer d'une seule flèche les féroces rats des "
-"marais et pister tout ce qui bouge sur leur territoire."
+"Ils arpentent leur vie durant les marais et les forêts profondes de leur "
+"domaine sauvage. Même les féroces rats des marécages craignent leurs traits "
+"acérés et aucune trace n'échappe à leur talent de pisteur."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
